# chatterbox-vp

./: .dockerignore  .env.example  .gitignore  AUDIO_FILE_DOWNLOADS.md  BEAUTIFUL_UI_GUIDE.md  CODE_INTEGRATION_GUIDE.md  CUDA_DEVICE_FIX.md  Dockerfile  FINAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  SAMPLE_AUDIO_IMPLEMENTATION.md  TESTING_AND_VALIDATION.md  TROUBLESHOOTING_GUIDE.md  TTS_DROPDOWN_ADDITION.md  apply_fixes.py  beautiful_chatterbox_fixed.html  debug_dropdown.py  debug_dropdown_values.py  docker-compose.yml  enhanced_unified_webui.py  enhanced_unified_webui_direct.py  enhanced_unified_webui_fixed.py  final_themed_webui.py  index.html  manifest.json  pyproject.toml  tailwind_integration_plan.md  test_beautiful_ui.py  test_dropdown_fix.py  test_implementation.py  test_token_functionality.py  unified_webui.py
samples/: IMPLEMENTATION_PLAN.md  README.md  USER_GUIDE.md  config.md  sample_config.md  sample_config.py
src/chatterbox/: __init__.py  mtl_tts.py  tts_turbo.py
